2006-10-22  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Pad.java: (Pad):
	Add helper function.

	* src/com/fluendo/plugin/OggDemux.java: (OggDemux.....OggStream),
	(OggDemux.....OggStream.OggStream),
	(OggDemux.....OggStream.markDiscont),
	(OggDemux.....OggStream.reset),
	(OggDemux.....OggStream.isComplete),
	(OggDemux.....OggStream.activate),
	(OggDemux.....OggStream.pushPacket), (OggDemux.....OggStream.Pad):
	Combine the flow of all streams so that we don't crap out when only one
	stream is linked. Fixes #434 

2006-10-22  Wim Taymans  <wim@fluendo.com>

	* README:
	Review readme, Fixes #390.

	* src/com/fluendo/jst/Sink.java: (Sink.Pad):
	Small cleanup.

	* src/com/fluendo/player/Cortado.java: (Cortado.newState):
	Remove superfluous setState call.

2006-10-22  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Element.java: (Element),
	(Element.getStateNext), (Element.continueState):
	Make state transitions more debuggable.
	Mark element as busy while it performs a state change.

	* src/com/fluendo/jst/Pipeline.java: (Pipeline),
	(Pipeline.Pipeline), (Pipeline.add), (Pipeline.remove),
	(Pipeline.SortedEnumerator.queueNextElement),
	(Pipeline.SinkEnumerator.nextElement), (Pipeline.SinkEnumerator),
	(Pipeline.enumSinks), (Pipeline.handleSyncMessage),
	(Pipeline.getState), (Pipeline.reCalcState):
	Handle switching of clock providers.
	Mark state dirty when removing elements.
	Add helper method to mark state dirty and force a state recalc.

	* src/com/fluendo/player/CortadoPipeline.java:
	(CortadoPipeline.padRemoved):
	Remove unused sinks after all media is detected. (Fixes #157)

2006-10-21  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Pipeline.java: (Pipeline.doChildStateChange):
	changeState is supposed to be protected.

	* src/com/fluendo/player/Cortado.java: (Cortado),
	(Cortado.getParameterInfo), (Cortado.init), (Cortado.run),
	(Cortado.start):
	Fix statusThread not working after going to STOP